creo un forma de controlar la combinacion de circulos que clickeo el usuario

--- a/index.html
+++ b/index.html
@@ -94,17 +94,25 @@
 					<i class="fas fa-circle"></i>
 				</span>
 			</li>
+			<li class="instruction-item">
+				Resultado: 
+				<br>
+				<span class="icon icon-blue">
+					<i class="fas fa-circle"></i>
+				</span>
+				</span>
+			</li>
 		</ul>
 	</div>
 	<div class="container container-group" id="container-group">
 		<div class="container">
-			<div class="circle circle-green" onclick="clickGreen()"></div>
+			<div class="circle circle-green"></div>
 		</div>
 		<div class="container">
-			<div class="circle circle-red" onclick="clickRed()"></div>
+			<div class="circle circle-red"></div>
 		</div>
 		<div class="container">
-			<div class="circle circle-yellow" onclick="clickYellow()"></div>
+			<div class="circle circle-yellow"></div>
 		</div>
 	</div>
 	<script src="https://kit.fontawesome.com/9c0d9f5890.js" crossorigin="anonymous"></script>
