agregue una forma de notificar al usuario que hizo click

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	<link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
+	<div class="card-container">
+		<div class="card-message" id="card">
+			<h3 class="card-title" id="card-title">una tarjeta</h4>
+			<p class="card-text" id="card-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, blanditiis!</p>
+			<button type="button" id="card-btn">Cerrar</button>
+		</div>
+	</div>
+	
 	<div class="container container-full">
 		<h1 class="title">Mayor o Menor</h1>
 		<h2 class="subtitle">by Mati</h1>
@@ -95,14 +103,15 @@
 				</span>
 			</li>
 			<li class="instruction-item">
-				Resultado: 
+				Confirmar decision:
 				<br>
 				<span class="icon icon-blue">
-					<i class="fas fa-circle"></i>
+					<i class="fas fa-circle" id="confirm"></i>
 				</span>
 				</span>
 			</li>
 		</ul>
+		<a href="#container-group">Ir</a>
 	</div>
 	<div class="container container-group" id="container-group">
 		<div class="container">
