agregue algunas tarjetas para enviar mensajes al usuario

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 	<div class="card-container">
 		<div class="card-message" id="card">
-			<h3 class="card-title" id="card-title">una tarjeta</h4>
-			<p class="card-text" id="card-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, blanditiis!</p>
-			<button type="button" id="card-btn">Cerrar</button>
+			<h3 class="card-title" id="card-title"></h4>
+			<p class="card-text" id="card-message"></p>
 		</div>
 	</div>
 	
@@ -112,6 +111,9 @@
 			</li>
 		</ul>
 		<a href="#container-group">Ir</a>
+	</div>
+	<div class="container-circle" id="container-circle">
+		
 	</div>
 	<div class="container container-group" id="container-group">
 		<div class="container">
