agregue el numero aleatorio inicial, y un mensaje para resultado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	
 	<div class="container container-full">
 		<h1 class="title">Mayor o Menor</h1>
-		<h2 class="subtitle">by Mati</h1>
+		<h2 class="subtitle">by Mati</h2>
+		<h2 class="subtitle" id="number"></h2>
 		<ul class="instruction">
 			<li class="instruction-item">
 				Mayor:
