Reinicio el numero principal despues de que el usuario pida el resultado, agregue estilos para hacerlo responsive

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
 				</span>
 			</li>
 		</ul>
-		<a href="#container-group">Ir</a>
+		<a href="#container-group">
+			<span class="icon icon-blue">
+				<i class="fas fa-arrow-down"></i>
+			</span>
+		</a>
 	</div>
 	<div class="container-circle" id="container-circle">
 		
