Un poco de flow! Al mejor estilo js...

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 <body>
 	<div class="card-container">
 		<div class="card-message" id="card">
-			<h3 class="card-title" id="card-title"></h4>
-			<p class="card-text" id="card-message"></p>
+			<div>
+				<h3 class="card-title" id="card-title"></h4>
+				<p class="card-text" id="card-message"></p>
+			</div>
+			<img class="card-image" id="card-image">
+			
 		</div>
 	</div>
 	
